<resources>
    <string name="app_name">AndroidFundamentals</string>
    <string name="press_me">Press me</string>
    <string name="password">Password</string>
    <string name="notify_me">Notify me! :)</string>
    <string name="auto_backup_photos">Auto-backup photos</string>
    <string name="search_photos">Search photos</string>
    <string name="orange_textview">This is an orange TextView</string>
    <string name="green_textview">This is a green TextView</string>
    <string name="blue_textview">This is a blue TextView</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="this_is_green_button">This is a green button</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a new EditText</string>
    <string name="auto_backup">Auto backup</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="spinner_title">Spinner title</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="terms_and_conditions"><![CDATA[I accept T&C]]></string>
    <string name="submit">submit</string>
    <string name="result">Email: %1$s \nPhone: %2$s \nT&amp;C: %3$s</string>
    <string name="error_email">Fill the input with a valid email address</string>
    <string name="error_phone">Fill the input with a phone number</string>
    <string name="error_t_and_c"><![CDATA[Terms & conditions is required]]></string>
    <string name="scroll_view_description">ScrollView: A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.</string>
    <string name="spinner_selected">Selected: %s</string>
    <string name="spinner_example">Spinner example</string>
    <string name="dial">dial</string>
    <string name="go_to_next">Go to next</string>
    <string name="set_result">set result</string>
    <string name="content_desc_header">Header image</string>
    <string name="content_desc_thumbnail">Thumbnail image</string>
    <string name="happy_holidays">Happy Holidays!</string>
    <string name="from_arthur">From Arthur</string>
    <string name="description">Have yourself a merry little Christmas,\nLet your heart be light\nFrom now on, our troubles will be out of sight</string>
    <string name="let_it_snow">Let it snow</string>
    <string name="jingle_bells">jingle bells</string>
    <string name="hello_fragment">Hello Fragment!</string>
    <string name="button">button</string>
    <string name="add">Add</string>
    <string name="account">Account</string>
    <string name="feed">Feed</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="message_received">Message received</string>
    <string name="result_received">Result received</string>
    <string name="send">send</string>
    <string name="open_website">Open website</string>
    <string name="website_url">Website URL</string>
    <string name="location">Location</string>
    <string name="open_location">Open location</string>
    <string name="text_to_share">Text to share</string>
    <string name="share_text">Share text</string>
    <string name="number_to_dial">Number to dial</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="tab_sample_title">Tabs sample</string>
    <string name="movie_name">FIght Club</string>
    <string name="pet">Maya</string>
    <string name="food">Chilli con carne</string>
    <string name="assistant">Assistant</string>
    <string name="photos">Photos</string>
    <string name="albums">Albums</string>
    <string name="no_location_error">No location permission, can\'t retrieve user location</string>

    <string name="release_date">Release date: %1$s</string>
    <string name="popularity">Popularity: %1$f</string>
    <string name="button_save">Save</string>
    <string name="hint_word">New word</string>
    <string name="add_word">Add word</string>
    <string name="empty_word_error">Empty word returned</string>

</resources>